refactor(auth): change getAuthentication's parameter type to `Claims`
- add log if invalid jwt